fixed slight spacing issues

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -32,5 +32,6 @@
 
     .textBox {
         @include flex-center;
+        gap: 1rem;
     }
 }
